# atgtools

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  environment-2021.yaml  environment-2022a.yaml  environment.yaml  format.py  format_input.py  hmp_small_aerobiosis.json  hmp_small_aerobiosis.pickle  hmp_small_aerobiosis.res  lefse.py  main.py  plot_lefse.py  pyproject.toml  tox.ini
.github/workflows/: install.yml  poetry.yaml
atg/: app.py  utils.py
atg/commands/: app.py
atg/commands/parser/: app.py
atg/commands/tools/: ena.py
atg/div/: alpha.py  app.py
atg/lefse/: app.py  format.py  lefse.py  plot.py
atg/parser/: app.py
atg/tools/: app.py  ena.py  git.py  manifest.py
