[tool.poetry]
name = "atgtools"
version = "0.1.8a3"
description = ""
authors = ["Otoniel Maya <otto94@gmail.com>"]
license = "MIT"
packages = [{include = "atg", from = "."}]

[tool.poetry.dependencies]
python = ">=3.9,<=3.12"
typer = "^0.9.0"
rich = "^13.3.5"
pandas = "^2.0.2"
icecream = "^2.1.3"
toml = "^0.10.2"
requests = "^2.31.0"
psutil = "^5.9.5"
tqdm = "^4.66.1"
tabulate = "^0.9.0"
colored = "^2.2.3"
rpy2 = "^3.5.14"
loguru = "^0.7.2"
matplotlib = "^3.8.0"
types-toml = "^0.10.8.7"
types-psutil = "^5.9.5.16"
mypy = "^1.5.1"
pandas-stubs = "^2.0.3.230814"
types-requests = "^2.31.0.5"
types-tqdm = "^4.66.0.2"
anndata = "^0.10.4"
pyfastx = "^2.0.2"

[tool.poetry.scripts]
atg = 'atg:atg'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# make it compatible with black
profile = "black" 
